[package]
name = "crossbeam-skiplist-fd"
# When publishing a new version:
# - Update CHANGELOG.md
# - Update README.md (when increasing major or minor version)
version = "0.1.5"
edition = "2021"
rust-version = "1.81"
license = "MIT OR Apache-2.0"
repository = "https://github.com/al8n/crossbeam"
homepage = "https://github.com/al8n/crossbeam/tree/crossbeam-skiplist-fd"
description = "A long-term maintained forked version of the crossbeam-skiplist for supporting more flexible key comparison customization."
keywords = ["map", "set", "skiplist", "lock-free"]
categories = ["algorithms", "concurrency", "data-structures", "no-std"]

[features]
default = ["std"]

# Enable to use APIs that require `std`.
# This is enabled by default.
std = ["alloc", "crossbeam-epoch/std", "crossbeam-utils/std", "dbutils/std"]

# Enable to use APIs that require `alloc`.
# This is enabled by default and also enabled if the `std` feature is enabled.
#
# NOTE: Disabling both `std` *and* `alloc` features is not supported yet.
alloc = ["crossbeam-epoch/alloc", "dbutils/alloc"]

[dependencies]
crossbeam-epoch = { version = "0.9", default-features = false }
crossbeam-utils = { version = "0.8", default-features = false }
dbutils = { version = "0.12", default-features = false }
equivalent-flipped = "1"

[dev-dependencies]
rand = "0.8"

# [lints]
# workspace = true
